<resources>
    <string name="app_name">LoginFirebaseKuy</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_student_phone_number">Enter Student Phone Number</string>
    <string name="jenis_barang">Masukkan Jenis Barang</string>
    <string name="harga_barang">Masukkan Harga Barang</string>
    <string name="jumlah_kilo">Jumlah/Kilo</string>
    <string name="logout">Logout</string>
    <string name="nama_barang">Masukkan Nama Barang</string>
    <string name="umur_barang">Masukkan Umur Barang</string>
    <string name="insert_data_into_firebase_database">Insert Data Into Firebase Database</string>
    <string name="masukkan_jumlah_barang">Masukkan Jumlah Barang</string>
    <string name="masukkan_harga_barang">Masukkan Harga Barang</string>
    <string name="text_nama_barang">Nama Barang</string>
    <string name="text_jenis_barang">Jenis Barang</string>
    <string name="text_umur_barang">Umur Barang</string>
    <string name="text_harga_barang">Harga Barang</string>
</resources>
