<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertActivity">

    <EditText
        android:id="@+id/text_nama_barang"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="90dp"
        android:gravity="center"
        android:hint="@string/nama_barang"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_jenis_barang"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="90dp"
        android:gravity="center"
        android:textSize="18sp"
        android:inputType="text"
        android:hint="@string/jenis_barang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nama_barang" />

    <EditText
        android:id="@+id/text_umur_barang"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:hint="@string/umur_barang"
        app:layout_constraintTop_toBottomOf="@id/text_jenis_barang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="90dp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/text_jumlah_barang"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_jumlah_barang"
        android:gravity="center"
        android:layout_marginStart="90dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="90dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/text_umur_barang"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/text_harga_barang"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_harga_barang"
        android:gravity="center"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="19dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/text_jumlah_barang"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_jenis_barang"
        android:layout_marginStart="90dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/btn_round"
        android:text="@string/insert_data_into_firebase_database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_harga_barang" />
</androidx.constraintlayout.widget.ConstraintLayout>